wrap element on recipe button and content width fixed

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -15,7 +15,7 @@ body {
     margin-bottom: 10px;
     margin-left: auto;
     margin-right: auto;
-    width: 65em;
+    width: 70%;
     border-radius: 25px;
 }
 
@@ -43,8 +43,13 @@ body {
 .float-right {
     float: right;
 }
+
 .center {
     text-align: center !important;
+}
+
+.wrap {
+    overflow-wrap: break-word;
 }
 
 /*--------------------------------------------- NAV BAR */
@@ -72,6 +77,7 @@ body {
 }
 
 /*--------------------------------------------- RECIPES */
+
 .page-content-recipes {
     background-color: #ECE9E9;
     margin-top: 10px;
@@ -193,6 +199,7 @@ body {
     background-color: #DADADA;
     border-radius: 25px;
     border: 10px;
+    width: 70%;
 }
 
 .recipe-element {
